Changes body overflow property from 'scroll' to 'visible'
The horizontal scrollbar was shown on Windows browsers when overflow was set to 'scroll'

--- a/css/styles_new.css
+++ b/css/styles_new.css
@@ -21,7 +21,7 @@ body {
     text-align: center;
     font-family: 'Kiwi Maru', serif;
     height: 100vh;
-    overflow: scroll;
+    overflow: visible;
 }
 
 nav {
